# Enterprise-AI-Business-Intelligence-Analytics-Platform

./: .dockerignore  .gitignore  CLAUDE.md  DEVELOPER_HANDOFF.md  README.md
backend/: .env.example  pyproject.toml
backend/config/: llm_routing.yaml
backend/enterprise_bi/: __init__.py  auth_dep.py
backend/enterprise_bi/api/: __init__.py  dev_routes.py  models.py  routes.py
backend/enterprise_bi/app/: __init__.py  composition.py  factory.py  main.py
backend/enterprise_bi/config/: __init__.py  settings.py
backend/enterprise_bi/orchestration/: __init__.py  builder.py  deps.py  service.py  state.py
backend/enterprise_bi/orchestration/agents/: __init__.py  analytics_agent.py  execute_agent.py  guardrail_agent.py  insight_agent.py  intent_agent.py  schema_agent.py  sql_agent.py  validate_agent.py  viz_agent.py
backend/prompts/: agent_prompts.yaml
backend/scripts/: gen_seed.py  mint_dev_token.py
backend/sql/: 01_schema.sql  02_seed.sql
backend/tests/: conftest.py  test_orchestration_e2e.py  test_rbac_and_api.py
changelog/: changelog.md
deploy/: Dockerfile  docker-compose.yml  nginx.conf
frontend/: .env.example  README.md  index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: AppLayout.tsx  AppTheme.tsx  index.css  main.tsx  routes.tsx  vite-env.d.ts
frontend/src/api/: client.ts  schemas.ts
frontend/src/auth/: AuthContext.tsx  RequireAuth.tsx  session.ts
frontend/src/components/result/: ChartRenderer.tsx  InsightPanel.tsx  ResultTable.tsx  SqlPanel.tsx
frontend/src/components/ui/: primitives.tsx
frontend/src/config/: env.ts
frontend/src/lib/: roles.ts
frontend/src/pages/sign-in/: SignInPage.tsx
frontend/src/pages/workspace/: AskWorkspace.tsx
